--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!--Page Home-->
 		<div class="textbox" id="p0" data-mcs-theme="minimal-dark">
 			<h1>[ HOME ]</h1>
-			<span class="content">Hello! 我是ZH! 因為有太多綽號了，所以就隨便叫吧!<br>
+			<span class="content">Hello!<br>
 				
 
 			</span>
