--- a/index.html
+++ b/index.html
@@ -18,43 +18,49 @@
 
 <body>
 	<div class="container">
-		<div class="welcome">
-
-		<img id="profile_pic" src="./img/profile.jpg">
-
+		<div class="main">
 		<!--Page Home-->
-		<div class="textbox" id="p0" data-mcs-theme="minimal-dark">
-			<h1>[ HOME ]</h1>
-			<span class="content">Hello!<br>
-				
-
+		<div class="textbox" id="text0" data-mcs-theme="minimal-dark">
+			<img id="profile_pic" src="./img/profile.jpg">
+			<h1>Welcome !</h1>
+			<div class="icon_box">
+				<a class="fa fa-facebook" href="#"><div class="icon_content">Facebook</div></a>
+				<a class="fa fa-instagram" href="#"><div class="icon_content">Instagram</div></a>
+				<a class="fa fa-envelope-o" href="#"><div class="icon_content">Mail</div></a>
+				<a class="fa fa-telegram" href="#"><div class="icon_content">Telegram</div></a>
+				<a class="fa fa-github" href="#"><div class="icon_content">Github</div></a>
+			</div>
 			</span>
 		</div>
 
-		<div class="textbox" id="p1" data-mcs-theme="minimal-dark">
+		<div class="textbox" id="text1" data-mcs-theme="minimal-dark">
 			<h1>[ ABOUT ]</h1>
+			<h2>「你總是這樣輕言放棄的話，無論多久都只會原地踏步。」</h2>
+			<span class="content">
+				綽號：ㄗ拔 / ㄗㄨㄚˊ/ 花花 / 蚊香蛙 / 蛋包飯……太多了隨便叫吧 c:<br>
+				學習中：HTML / CSS / jQuery / p5.js / Python<br>
+				興趣：手作 / 塗鴉 / 日劇 / 日本推理小說 / 懸疑電影<br>
+				休閒：<span title="ID: 埃爾蚊香蛙" style="cursor: crosshair;">LOL</span> / <span title="ID: Sawano" style="cursor: crosshair;">osu!</span><br>
+				<br>
+				經歷：全國高級中等學校技藝競賽 網頁設計組 第一名<br>
+				　　　1
+			</span>
 		</div>
 
-		<div class="textbox" id="p2" data-mcs-theme="minimal-dark">
+		<div class="textbox" id="text2" data-mcs-theme="minimal-dark">
 			<h1>[ WORKS ]</h1>
 		</div>
 
-		<div class="textbox" id="p3" data-mcs-theme="minimal-dark">
-			<h1>[ CONTACT ]</h1>
-			<div class="icon_box">
-				<a class="fa fa-facebook" href="#"></a>
-				<a class="fa fa-instagram" href="#"></a>
-				<a class="fa fa-envelope-o" href="#"></a>
-				<a class="fa fa-telegram" href="#"></a>
-				<a class="fa fa-github" href="#"></a>
-			</div>
+		<div class="textbox" id="text3" data-mcs-theme="minimal-dark">
+			<h1>[ ... ]</h1>
+			
 		</div>
 		
 		<ul class="nav">
 			<li id="nav_li_0">HOME</li>
 			<li>ABOUT</li>
 			<li>WORKS</li>
-			<li>CONTACT</li>
+			<li>...</li>
 		</ul>
 	</div>
 </div>
