--- a/index.html
+++ b/index.html
@@ -24,34 +24,45 @@
 			<img id="profile_pic" src="./img/profile.jpg">
 			<h1>Welcome !</h1>
 			<div class="icon_box">
-				<a class="fa fa-facebook" href="#"><div class="icon_content">Facebook</div></a>
-				<a class="fa fa-instagram" href="#"><div class="icon_content">Instagram</div></a>
-				<a class="fa fa-envelope-o" href="#"><div class="icon_content">Mail</div></a>
-				<a class="fa fa-telegram" href="#"><div class="icon_content">Telegram</div></a>
-				<a class="fa fa-github" href="#"><div class="icon_content">Github</div></a>
+				<a class="fa fa-facebook" target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><div class="icon_content">Facebook</div></a>
+				<a class="fa fa-instagram" target="new" href="https://www.instagram.com/w94685/"><div class="icon_content">Instagram</div></a>
+				<a class="fa fa-envelope-o" target="new" href="mailto:w94685@gmail.com"><div class="icon_content">Mail</div></a>
+				<a class="fa fa-telegram" target="new" href="https://t.me/w94685"><div class="icon_content">Telegram</div></a>
+				<a class="fa fa-github" target="new" href="https://github.com/w94685"><div class="icon_content">Github</div></a>
 			</div>
 			</span>
 		</div>
 
-		<div class="textbox" id="text1" data-mcs-theme="minimal-dark">
+		<!--Page ABOUT-->
+		<div class="textbox" data-mcs-theme="minimal-dark">
 			<h1>[ ABOUT ]</h1>
 			<h2>「你總是這樣輕言放棄的話，無論多久都只會原地踏步。」</h2>
 			<span class="content">
-				綽號：ㄗ拔 / ㄗㄨㄚˊ/ 花花 / 蚊香蛙 / 蛋包飯……太多了隨便叫吧 c:<br>
-				學習中：HTML / CSS / jQuery / p5.js / Python<br>
-				興趣：手作 / 塗鴉 / 日劇 / 日本推理小說 / 懸疑電影<br>
-				休閒：<span title="ID: 埃爾蚊香蛙" style="cursor: crosshair;">LOL</span> / <span title="ID: Sawano" style="cursor: crosshair;">osu!</span><br>
-				<br>
-				經歷：全國高級中等學校技藝競賽 網頁設計組 第一名<br>
-				　　　1
+				　　HOLA！我是<b>w94685</b>，中壢高商資處高三學生，是個宅宅的吃貨，個性樂觀隨和好相處（自己說）。
+				誤打誤撞當上技藝競賽網頁選手，開始了網設這條不歸路。喜歡會動的網頁，因為我覺得很酷炫。小夢想是建立一個超多新奇小動畫的個人網頁，因為我覺得這樣很酷。<br>
+				　　標題出自Stand By Me的哆啦A夢，我的超級大缺點就是「懶惰」，「逃避雖可恥但有用」這只適合新垣結衣，一般人只會不進則退啊！為了改掉懶惰，目前正積極參加活動，期待有一天能夠被說很勤勞。<br>
+				　　人生夢想是世界和平(X)、養很多貓貓狗狗。現在育有一隻橘貓ㄔㄔ，歡迎到IG看看肥貓養成日誌！<br>
+				<span style="color: #CCC">▼ ▼ ▼</span><br>
+				綽號：<b>ㄗ拔</b> / ㄗㄨㄚˊ/ 花花 / 蚊香蛙 / 蛋包飯……太多了隨便叫吧 c:<br>
+				學習中：HTML5 / <b>CSS3</b> / <b>jQuery</b> / p5.js / Python<br>
+				興趣：手作 / <b>塗鴉</b><br>
+				休閒：<b>日劇</b> / 日本推理小說 / 懸疑電影 / <span title="ID: 埃爾蚊香蛙" style="cursor: crosshair;border-bottom: 1px dashed;"><b>LOL</b></span> / <span title="ID: Sawano" style="cursor: crosshair;border-bottom: 1px dashed;">osu!</span><br>
+				能力：全國高級中等學校技藝競賽 網頁設計組 第一名<br>
+				　　　多益 600分<br>
+				　　　希望未來會越來越多 c:
 			</span>
 		</div>
-
+		<!--Page WORKS-->
 		<div class="textbox" id="text2" data-mcs-theme="minimal-dark">
 			<h1>[ WORKS ]</h1>
+			<ul class="slide">
+				<li class="works" style="background-image: url(img/work1.jpg);"><span style="border-bottom: 3px dashed; cursor: pointer;">Q版Youtuber插圖</span></li>
+				<li class="works"></li>
+				<li class="works"></li>
+			</ul>
 		</div>
 
-		<div class="textbox" id="text3" data-mcs-theme="minimal-dark">
+		<div class="textbox" data-mcs-theme="minimal-dark">
 			<h1>[ ... ]</h1>
 			
 		</div>
@@ -63,6 +74,7 @@
 			<li>...</li>
 		</ul>
 	</div>
+	<footer id="footer"><span style="border-bottom: 1px dashed">Designed by w94685</span></footer>
 </div>
 </body>
 </html>
