--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="container">
 		<div class="main">
-		<!--Page Home-->
+		<!--Page1 Home-->
 		<div class="textbox" id="text0" data-mcs-theme="minimal-dark">
 			<img id="profile_pic" src="./img/profile.jpg">
 			<h1>Welcome !</h1>
@@ -33,7 +33,7 @@
 			</span>
 		</div>
 
-		<!--Page ABOUT-->
+		<!--Page2 ABOUT-->
 		<div class="textbox" data-mcs-theme="minimal-dark">
 			<h1>[ ABOUT ]</h1>
 			<h2>「你總是這樣輕言放棄的話，無論多久都只會原地踏步。」</h2>
@@ -52,14 +52,30 @@
 				　　　希望未來會越來越多 c:
 			</span>
 		</div>
-		<!--Page WORKS-->
-		<div class="textbox" id="text2" data-mcs-theme="minimal-dark">
+
+		<!--Page3 WORKS-->
+		<div class="textbox" id="text2">
 			<h1>[ WORKS ]</h1>
-			<ul class="slide">
-				<li class="works" style="background-image: url(img/work1.jpg);"><span style="border-bottom: 3px dashed; cursor: pointer;">Q版Youtuber插圖</span></li>
-				<li class="works"></li>
-				<li class="works"></li>
-			</ul>
+			<div class="slide_box">
+				<div class="btn" id="left" style="left: 0;"><</div>
+				<div class="btn" id="right" style="right: 0;">></div>
+				<ul class="slide">
+					<li class="works" style="background-image: url(img/work1.jpg);">
+						<span style="border-bottom: 3px dashed; cursor: pointer;">Q版Youtuber插圖</span>
+					</li>
+					<li class="works" style="background-image: url(img/work1.jpg);">
+						<span style="border-bottom: 3px dashed; cursor: pointer;">111111</span>
+					</li>
+					<li class="works" style="background-image: url(img/work1.jpg);">
+						<span style="border-bottom: 3px dashed; cursor: pointer;">2222222</span>
+					</li>
+				</ul>
+			</div>
+			<div class="smallbtn_box">
+				<div class="smallbtn" style="margin-left: 23vw;"></div>
+				<div class="smallbtn"></div>
+				<div class="smallbtn"></div>
+			</div>
 		</div>
 
 		<div class="textbox" data-mcs-theme="minimal-dark">
