--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Heyyyyyyy</title>
+	<title>:: w94685 ::</title>
 	<!--main css&js-->
 	<script src="./js/jquery-1.6.4.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/index_css.css">
@@ -17,12 +17,15 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="main">
+	<div class="container"><!--web page box-->
+		<div class="main"><!--main box-->
+
 		<!--Page1 Home-->
 		<div class="textbox" id="text0" data-mcs-theme="minimal-dark">
 			<img id="profile_pic" src="./img/profile.jpg">
 			<h1>Welcome !</h1>
+
+			<!--social icon-->
 			<div class="icon_box">
 				<a class="fa fa-facebook" target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><div class="icon_content">Facebook</div></a>
 				<a class="fa fa-instagram" target="new" href="https://www.instagram.com/w94685/"><div class="icon_content">Instagram</div></a>
@@ -30,19 +33,23 @@
 				<a class="fa fa-telegram" target="new" href="https://t.me/w94685"><div class="icon_content">Telegram</div></a>
 				<a class="fa fa-github" target="new" href="https://github.com/w94685"><div class="icon_content">Github</div></a>
 			</div>
-			</span>
 		</div>
 
 		<!--Page2 ABOUT-->
 		<div class="textbox" data-mcs-theme="minimal-dark">
+			<!--title-->
 			<h1>[ ABOUT ]</h1>
 			<h2>「你總是這樣輕言放棄的話，無論多久都只會原地踏步。」</h2>
+
+			<!--content-->
 			<span class="content">
+				<!--content part1-->
 				　　HOLA！我是<b>w94685</b>，中壢高商資處高三學生，是個宅宅的吃貨，個性樂觀隨和好相處（自己說）。
 				誤打誤撞當上技藝競賽網頁選手，開始了網設這條不歸路。喜歡會動的網頁，因為我覺得很酷炫。小夢想是建立一個超多新奇小動畫的個人網頁，因為我覺得這樣很酷。<br>
 				　　標題出自Stand By Me的哆啦A夢，我的超級大缺點就是「懶惰」，「逃避雖可恥但有用」這只適合新垣結衣，一般人只會不進則退啊！為了改掉懶惰，目前正積極參加活動，期待有一天能夠被說很勤勞。<br>
 				　　人生夢想是世界和平(X)、養很多貓貓狗狗。現在育有一隻橘貓ㄔㄔ，歡迎到IG看看肥貓養成日誌！<br>
 				<span style="color: #CCC">▼ ▼ ▼</span><br>
+				<!--content part2-->
 				綽號：<b>ㄗ拔</b> / ㄗㄨㄚˊ/ 花花 / 蚊香蛙 / 蛋包飯……太多了隨便叫吧 c:<br>
 				學習中：HTML5 / <b>CSS3</b> / <b>jQuery</b> / p5.js / Python<br>
 				興趣：手作 / <b>塗鴉</b><br>
@@ -56,40 +63,55 @@
 		<!--Page3 WORKS-->
 		<div class="textbox" id="text2">
 			<h1>[ WORKS ]</h1>
+
+			<!--slide-->
 			<div class="slide_box">
+				<!--btn-->
 				<div class="btn" id="left" style="left: 0;"><</div>
 				<div class="btn" id="right" style="right: 0;">></div>
+				
+
+				<!--slide ul-->
 				<ul class="slide">
 					<li class="works" style="background-image: url(img/work1.jpg);">
-						<span style="border-bottom: 3px dashed; cursor: pointer;">Q版Youtuber插圖</span>
+						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">比賽作品</span></a>
 					</li>
-					<li class="works" style="background-image: url(img/work1.jpg);">
-						<span style="border-bottom: 3px dashed; cursor: pointer;">111111</span>
+					<li class="works" style="background-image: url(img/work2.jpg);">
+						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">手繪塗鴉</span></a>
 					</li>
-					<li class="works" style="background-image: url(img/work1.jpg);">
-						<span style="border-bottom: 3px dashed; cursor: pointer;">2222222</span>
+					<li class="works" style="background-image: url(img/work3.jpg);">
+						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">電繪作品</span></a>
 					</li>
 				</ul>
 			</div>
 			<div class="smallbtn_box">
-				<div class="smallbtn" style="margin-left: 23vw;"></div>
+				<div class="smallbtn" style="margin-left: 23vw; background-color: #198d91"></div>
 				<div class="smallbtn"></div>
 				<div class="smallbtn"></div>
 			</div>
 		</div>
 
+		<!--Page4-->
 		<div class="textbox" data-mcs-theme="minimal-dark">
 			<h1>[ ... ]</h1>
 			
 		</div>
 		
+
+		<!--nav-->
 		<ul class="nav">
 			<li id="nav_li_0">HOME</li>
 			<li>ABOUT</li>
 			<li>WORKS</li>
-			<li>...</li>
+			<!--<li>...</li>-->
 		</ul>
 	</div>
+
+	<!--<div class="coverBg">
+		<img id="works_close" src="img/close.png">
+		<div class="worksBox"></div>
+	</div>-->
+	
 	<footer id="footer"><span style="border-bottom: 1px dashed">Designed by w94685</span></footer>
 </div>
 </body>
