--- a/index.html
+++ b/index.html
@@ -44,19 +44,17 @@
 			<!--content-->
 			<span class="content">
 				<!--content part1-->
-				　　HOLA！我是<b>w94685</b>，中壢高商資處高三學生，是個宅宅的吃貨，個性樂觀隨和好相處（自己說）。
-				誤打誤撞當上技藝競賽網頁選手，開始了網設這條不歸路。喜歡會動的網頁，因為我覺得很酷炫。小夢想是建立一個超多新奇小動畫的個人網頁，因為我覺得這樣很酷。<br>
+				　　HOLA！我是<b>w94685</b>，是個宅宅的吃貨，個性樂觀隨和好相處。
+				高三誤打誤撞當上技藝競賽網頁選手，開始了網設這條不歸路。喜歡會動的網頁，因為我覺得很酷炫。小夢想是建立一個超多新奇小動畫的個人網頁，因為我覺得這樣很酷。<br>
 				　　標題出自Stand By Me的哆啦A夢，我的超級大缺點就是「懶惰」，「逃避雖可恥但有用」這只適合新垣結衣，一般人只會不進則退啊！為了改掉懶惰，目前正積極參加活動，期待有一天能夠被說很勤勞。<br>
-				　　人生夢想是世界和平(X)、養很多貓貓狗狗。現在育有一隻橘貓ㄔㄔ，歡迎到IG看看肥貓養成日誌！<br>
+				　　人生夢想是世界和平(X)、養很多貓貓狗狗。現在家裡養了兩隻賠錢貨，一隻橘貓ㄔㄔ，一隻黑貓挖哩勒，歡迎到IG看看肥貓養成日誌！<br>
 				<span style="color: #CCC">▼ ▼ ▼</span><br>
 				<!--content part2-->
 				綽號：<b>ㄗ拔</b> / ㄗㄨㄚˊ/ 花花 / 蚊香蛙 / 蛋包飯……太多了隨便叫吧 c:<br>
-				學習中：HTML5 / <b>CSS3</b> / <b>jQuery</b> / p5.js / Python<br>
+				學習中：HTML / <b>CSS</b> / <b>jQuery</b> / Python / 日語 / 印尼語<br>
 				興趣：手作 / <b>塗鴉</b><br>
-				休閒：<b>日劇</b> / 日本推理小說 / 懸疑電影 / <span title="ID: 埃爾蚊香蛙" style="cursor: crosshair;border-bottom: 1px dashed;"><b>LOL</b></span> / <span title="ID: Sawano" style="cursor: crosshair;border-bottom: 1px dashed;">osu!</span><br>
-				能力：全國高級中等學校技藝競賽 網頁設計組 第一名<br>
-				　　　多益 600分<br>
-				　　　希望未來會越來越多 c:
+				休閒：<b>日劇</b> / 日本推理小說 / 懸疑電影 / <span title="ID: 埃爾蚊香蛙" style="cursor: crosshair;border-bottom: 1px dashed;"><b>LOL</b></span> / <span title="ID: Sawano" style="cursor: crosshair;border-bottom: 1px dashed;">osu!</span>
+				
 			</span>
 		</div>
 
@@ -74,13 +72,13 @@
 				<!--slide ul-->
 				<ul class="slide">
 					<li class="works" style="background-image: url(img/work1.jpg);">
-						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">比賽作品</span></a>
+						<span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">比賽作品</span>
 					</li>
 					<li class="works" style="background-image: url(img/work2.jpg);">
-						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">手繪塗鴉</span></a>
+						<span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">手繪塗鴉</span>
 					</li>
 					<li class="works" style="background-image: url(img/work3.jpg);">
-						<a target="new" href="https://www.facebook.com/profile.php?id=100009049487728"><span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">電繪作品</span></a>
+						<span class="works_btn" style="border-bottom: 3px dashed; cursor: pointer;">電繪作品</span>
 					</li>
 				</ul>
 			</div>
@@ -107,10 +105,10 @@
 		</ul>
 	</div>
 
-	<!--<div class="coverBg">
+	<div class="coverBg">
 		<img id="works_close" src="img/close.png">
 		<div class="worksBox"></div>
-	</div>-->
+	</div>
 	
 	<footer id="footer"><span style="border-bottom: 1px dashed">Designed by w94685</span></footer>
 </div>
